# rs_party

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  notebook.md
client/: Dockerfile  package-lock.json  package.json
client/src/: App.vue  api.ts  main.ts  model.ts  router.ts  store.ts
client/src/components/: HealthCheck.vue  StoreUtil.vue
client/src/routes/: EventsView.vue  LoginView.vue  NewEventView.vue  RegisterView.vue
cs523-docs/cs523-project-proposal/: cs523-project-proposal.tex
cs586-docs/: deliverable_1.md
cs594-docs/: draft-rfc.md  draft-rfc.txt  draft-rfc.xml  selection-and-criteria.md
server/: Cargo.toml  Dockerfile  Makefile
server/src/: conf.rs  db.rs  lib.rs  logging.rs  main.rs  middleware.rs  model.rs  routes.rs
server/src/sql/: get_sessionuser.sql  queries.rs  setup.sql  teardown.sql  teardown_local.sql
src/: conf.rs  db.rs  fairings.rs  lib.rs  logging.rs  main.rs  model.rs  routes.rs
src/components/: app.rs
src/sql/: query1.sql  setup.sql  setup_local.sql  teardown.sql
