[package]
name = "cs523-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

# https://book.leptos.dev/getting_started/leptos_dx.html#1-set-up-console_error_panic_hook
console_error_panic_hook = "0.1.7"
rocket = {version = "0.5.1", features = ["secrets", "tls", "json"] }
sqlx = "0.8.3"
rocket_db_pools = "0.2.0"
