[package]
name = "rs_party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres", "macros", "chrono"] }

rocket = {version = "0.5.1", features = ["secrets", "tls", "json"] }
rocket_db_pools = {version = "0.2.0", features = ["sqlx_postgres"]}


chrono = "0.4.39"
bcrypt = "0.17.0"

[dependencies.uuid]
version = "1.13.1"
features = [
  "v4"
]
