[package]
name = "rs_party"
version = "0.1.0"
edition = "2021"
default-run = "rs_party"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }

chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
serde = { version = "1.0.218", features = ["derive"] }
regex = "1.11.1"

[dependencies.uuid]
version = "1.13.1"
features = ["v4"]

[[bin]]
name = "rs_party"
path = "src/main.rs"

[[bin]]
name = "dummy"
path = "bin/dummy.rs"
